feat: put Lazy Fetch to avoid infinity loop